remove boostrap/add jakestrap

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>QQ - Quick Query</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/jakestrap.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Quick Query</a>
+        <a class="navbar-brand" href="./index.html">Quick Query</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -37,19 +38,19 @@
 
   <div class="container-fluid text-center">
     <div class="row content">
-      <div class="col-sm-2 sidenav">
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
+      <div class="col-sm-3 sidenav">
+        <p>Filters:</p>
       </div>
-      <div class="col-sm-8 text-left">
+      <div class="col-sm-6 text-left">
         <h1>Data Preview:</h1>
         <p>put table here</p>
         <hr>
+        <h1>ERD:</h1>
+        <p>put ERD here</p>
       </div>
-      <div class="col-sm-2 sidenav">
+      <div class="col-sm-3 sidenav">
         <div>
-          <p>Download Options:</p>
+          <p>Chatbot:</p>
         </div>
       </div>
     </div>
