--- a/index.html
+++ b/index.html
@@ -9,30 +9,13 @@
   <link rel="stylesheet" href="./css/jakestrap.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="apple-touch-icon" sizes="57x57" href="./img/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./img/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./img/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./img/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./img/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./img/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./img/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./img/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="./img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-  <link rel="manifest" href="./img/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./img/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <img src="" alt="QQ" height="42" width="42">
+        <img src="./img/" alt="QQ" height="42" width="42">
         <a class="navbar-brand" href="./index.html">Quick Query</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -48,7 +31,7 @@
       <div class="col-sm-3 sidenav">
         <h1>Filters:</h1>
       </div>
-      <div class="col-sm-6 text-left">
+      <div class="col-sm-6">
         <h1>Data Preview:</h1>
         <p>put table here</p>
         <hr>
