--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <img src="./img/" alt="QQ" height="42" width="42">
+        <img src="./img/qq.png" alt="QQ" height="42" width="42">
         <a class="navbar-brand" href="./index.html">Quick Query</a>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><span class="glyphicon glyphicon-download-alt"></span> Download</a></li>
         </ul>
