--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="./css/jakestrap.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+  <link rel="manifest" href="./img/site.webmanifest">
+  <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#1658A6">
+  <meta name="msapplication-TileColor" content="#1658A6">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -33,7 +40,10 @@
       </div>
       <div class="col-sm-6">
         <h1>Data Preview:</h1>
-        <p>put table here</p>
+        <table id="data-table">
+          <thead id="table-head"></thead>
+          <tbody id="table-body"></tbody>
+        </table>
         <hr>
         <h1>ERD:</h1>
         <p>put ERD here</p>
