--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1>Filters:</h1>
         <hr>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-5">
         <h1>Data Preview:</h1>
         <table id="data-table">
           <thead id="table-head"></thead>
@@ -51,13 +51,13 @@
         <hr>
         <p>put ERD here</p>
       </div>
-      <div class="col-sm-3 sidenav">
+      <div class="col-sm-4 sidenav">
         <div>
           <h1>Rocket.Chat:</h1>
         </div>
         <hr>
         <div id="rocketchat-iframe">
-          <iframe src="http://rocketchat.ryanjkemper.com:3000"></iframe>
+          <iframe src="https://rocketchat.ryanjkemper.com" width="100%" height="100%"></iframe>
         </div>
       </div>
     </div>
